Overflow fix for master servers until we style it up

--- a/client/views/css/DoritoMenu.less
+++ b/client/views/css/DoritoMenu.less
@@ -65,6 +65,7 @@ body {
     &.active {
         visibility: visible;
         opacity: 1;
+        transition: opacity 0.7s cubic-bezier(0, 0, 0.2, 1);
     }
 }
 
